# home-dashboard

./: .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix
home-dashboard/: Cargo.toml
home-dashboard/src/: main.rs
home-dashboard/src/gui/: images.rs  mod.rs  texts.rs
home-dashboard/src/interface/: mod.rs
home-dashboard/src/worker/: bluetooth.rs  ddc_display.rs  mod.rs  netatmo.rs
src/: main.rs
src/gui/: mod.rs
src/interface/: mod.rs
src/worker/: mod.rs
