[package]
name = "home-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21"
confy = "0.5"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
bluez-async = "0.7"
futures = "0.3"
netatmo-connect = { path = "../netatmo-connect" }
serde = { version = "1.0.155", features = ["derive"] }
